Add thumbnails to papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,6 +108,7 @@
   author+an={1=highlight,equal;2=equal},
   html={https://ieeexplore.ieee.org/document/9712283},
   pdf={tit2022.pdf},
+  preview={tit2022.png},
   arxiv={1805.08342},
   code={https://github.com/jongharyu/knn-functional-estimation},
   selected={false},
@@ -126,6 +127,7 @@
   arxiv={2207.12382},
   html={https://ieeexplore.ieee.org/document/10645704},
   pdf={tit2024.pdf},
+  preview={tit2024.png},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   selected={true},
   abstract={This paper considers the problem of constructing a confidence sequence, which is a sequence of confidence intervals that hold uniformly over time, for estimating the mean of bounded real-valued random processes.
@@ -147,6 +149,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   html={https://ieeexplore.ieee.org/document/8451573/},
   pdf={icip2018.pdf},
   poster={icip2018-poster.pdf},
+  preview={icip2018.png},
   selected={false},
   abstract={A simple and scalable denoising algorithm is proposed that can be applied to a wide range of source and noise models. At the core of the proposed CUDE algorithm is symbol-by-symbol universal denoising used by the celebrated DUDE algorithm, whereby the optimal estimate of the source from an unknown distribution is computed by inverting the empirical distribution of the noisy observation sequence by a deep neural network, which naturally and implicitly aggregates multi-pie contexts of similar characteristics and estimates the conditional distribution more accurately. The performance of CUDE is evaluated for grayscale images of varying bit depths, which improves upon DUDE and its recent neural network based extension, Neural DUDE.},
 }
@@ -162,6 +165,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   author+an={1=abc;2=abc;3=abc;4=abc,highlight;5=abc},
   html={https://ieeexplore.ieee.org/document/8613436},
   pdf={itw2018.pdf},
+  preview={itw2018.png},
   abstract={The Liu--Cuff--Verdu lemma states that in estimating a source $X$ from an observation $Y$, making a random guess $X'$ from the posterior $p(x|y)$ can go wrong at most twice as often as the optimal answer. Several variations of this fundamental, yet rather arcane, result are explored for detection, decoding, and estimation problems.},
 }
 
@@ -176,6 +180,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   author+an={1=abc;2=abc;3=abc;4=abc,highlight;5=abc},
   html={https://ieeexplore.ieee.org/document/8636049/},
   pdf={allerton2018.pdf},
+  preview={allerton2018.png},
   abstract={A randomized decoder that generates the message estimate according to the posterior distribution is known to achieve the reliability comparable to that of the maximum a posteriori probability decoder. With a goal of practical implementations of such a randomized decoder, several Monte Carlo techniques, such as rejection sampling, Gibbs sampling, and the Metropolis algorithm, are adapted to the problem of efficient sampling from the posterior distribution. Analytical and experimental results compare the complexity and performance of these Monte Carlo decoders for simple linear codes and the binary symmetric channel.},
 }
 
@@ -190,6 +195,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   author+an={1=highlight},
   html={https://ieeexplore.ieee.org/document/9517746},
   pdf={isit2021.pdf},
+  preview={isit2021.png},
   selected={false},
   abstract={This paper proposes a special variant of Laplacian eigenmaps, whose solution is characterized by the underlying density and the eigenfunctions of the associated Hilbert--Schmidt operator of a similarity kernel function.
 In contrast to existing kernel-based spectral methods such as kernel principal component analysis and Laplacian eigenmaps, the new embedding algorithm only involves estimating density at each query point without any eigendecomposition of a matrix.
@@ -213,6 +219,7 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   pages={6022--6044},
   pdf={aistats2022.pdf},
   poster={aistats2022-poster.pdf},
+  preview={aistats2022.png},
   code={https://github.com/jongharyu/olo-with-side-information},
   selected={false},
   abstract={A class of parameter-free online linear optimization algorithms is proposed that harnesses the structure of an adversarial sequence by adapting to some side information. These algorithms combine the reduction technique of Orabona and P{\'a}l (2016) for adapting coin betting algorithms for online linear optimization with universal compression techniques in information theory for incorporating sequential side information to coin betting.
@@ -237,6 +244,7 @@ By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjal
   month=apr,
   booktitle=aistats,
   pdf={aistats2023.pdf},
+  preview={aistats2023.png},
   abstract={A new portfolio selection strategy that adapts to a continuous side-information sequence is presented, with a universal wealth guarantee against a class of state-constant rebalanced portfolios with respect to a state function that maps each side-information symbol to a finite set of states.
 In particular, given that a state function belongs to a collection of functions of finite Natarajan dimension, the proposed strategy is shown to achieve, asymptotically to first order in the exponent, the same wealth as the best state-constant rebalanced portfolio with respect to the best state function, chosen in hindsight from observed market.
 This result can be viewed as an extension of the seminal work of Cover and Ordentlich (1996) that assumes a single state function.},
@@ -254,6 +262,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   arxiv={1911.04018},
   html={https://ieeexplore.ieee.org/document/9054074},
   pdf={icassp2020.pdf},
+  preview={icassp2020.png},
   abstract={In this work, we propose a new recurrent autoencoder architecture, termed Feedback Recurrent AutoEncoder (FRAE), for online compression of sequential data with temporal dependency. The recurrent structure of FRAE is designed to efficiently extract the redundancy along the time dimension and allows a compact discrete representation of the data to be learned. We demonstrate its effectiveness in speech spectrogram compression. Specifically, we show that the FRAE, paired with a powerful neural vocoder, can produce high-quality speech waveforms at a low, fixed bitrate. We further show that by adding a learned prior for the latent space and using an entropy coder, we can achieve an even lower variable bitrate.},
 }
 
@@ -281,6 +290,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   year={2024},
   month=jul,
   pdf={isit2024.pdf},
+  preview={isit2024.png},
   author+an={3=highlight},
   note={<a href="https://openreview.net/forum?id=QOe0ekZkCQ">{A preliminary version}</a> of this manuscript was presented at <a href="https://icml.cc/virtual/2023/workshop/21493">ICML 2023 Workshop on Spurious Correlations, Invariance, and Stability</a>.},
   abstract={Learning a fair predictive model is crucial to mitigate biased decisions against minority groups in high-stakes applications.
@@ -308,6 +318,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
   pdf={icml2024a.pdf},
+  preview={icml2024a.png},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
 is a fundamental task in many machine learning and scientific computing problems.
 For high-dimensional eigenvalue problems, training neural networks to parameterize the eigenfunctions is considered as a promising alternative to the classical numerical linear algebra techniques.
@@ -332,6 +343,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   pdf={icml2024b.pdf},
+  preview={icml2024b.png},
   poster={icml2024-gambling-poster.pdf},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
   This paper proposes a new approach to constructing CSs for means of bounded multivariate stochastic processes using a general gambling framework, extending the recently established coin toss framework for bounded random processes.
@@ -339,7 +351,8 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   This paper specifically explores the use of the mixture portfolio, akin to Cover's universal portfolio, in the proposed framework and investigates the properties of the resulting CSs.
   Simulations demonstrate the tightness of these confidence sequences compared to existing methods.
   When applied to the sampling without-replacement setting for finite categorical data, it is shown that the resulting CS based on a universal gambling strategy is provably tighter than that of the posterior-prior ratio martingale proposed by Waudby-Smith and Ramdas.},
-  note={Spotlight (top 3.5%)},
+  award={Top 3.5% of submissions},
+  award_name={Spotlight},
 }
 
 @inproceedings{Shen--Ryu--Ghosh--Bu--Sattigerri--Wornell2024,
@@ -359,6 +372,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   abstract={This paper questions the effectiveness of a modern predictive uncertainty quantification approach, called \emph{evidential deep learning} (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. Despite their perceived strong empirical performance on downstream tasks, a line of recent studies by Bengs et al. identify limitations of the existing methods to conclude their learned epistemic uncertainties are unreliable, e.g., in that they are non-vanishing even with infinite data. Building on and sharpening such analysis, we 1) provide a sharper understanding of the asymptotic behavior of a wide class of EDL methods by unifying various objective functions; 2) reveal that the EDL methods can be better interpreted as an out-of-distribution detection algorithm based on energy-based-models; and 3) conduct extensive ablation studies to better assess their empirical effectiveness with real-world datasets. Through all these analyses, we conclude that even when EDL methods are empirically effective on downstream tasks, this occurs despite their poor uncertainty quantification capabilities. Our investigation suggests that incorporating model uncertainty can help EDL methods faithfully quantify uncertainties and further improve performance on representative downstream tasks, albeit at the cost of additional computational complexity.},
   html={https://openreview.net/forum?id=P6nVDZRZRB},
   poster={neurips2024-poster.pdf},
+  preview={neurips2024.png},
 }
 
 @inproceedings{Ryu--Shah--Wornell2025,
@@ -377,6 +391,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   selected={true},
   poster={icml2025-nce-poster.pdf},
   pdf={icml2025b.pdf},
+  preview={icml2025b.png},
 }
 
 @inproceedings{Jayashankar--Ryu--Wornell2025,
@@ -393,9 +408,11 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   eprint = {2502.09609},
   arXiv = {2502.09609},
   selected = {true},
-  note={Spotlight (top 2.6%)},
+  award={Top 2.6% of submissions},
+  award_name={Spotlight},
   poster={icml2025-smt-poster.pdf},
   pdf={icml2025a.pdf},
+  preview={icml2025a.png},
   code={https://github.com/tkj516/score-of-mixture-training},
 }
 
@@ -413,6 +430,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   eprint={2502.10826},
   arxiv={2502.10826},
   pdf={colt2025.pdf},
+  preview={colt2025.png},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   selected={true},
 }
@@ -429,6 +447,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2507.07222},
   primaryClass={cs.LG},
   pdf={neurips2025a.pdf},
+  preview={neurips2025a.png},
   selected={true},
   html={https://openreview.net/forum?id=kL2pnzClyD},
   abstract={The Koopman operator provides a principled framework for analyzing nonlinear dynamical systems through linear operator theory. Recent advances in dynamic mode decomposition (DMD) have shown that trajectory data can be used to identify dominant modes of a system in a data-driven manner. Building on this idea, deep learning methods such as VAMPnet and DPNet have been proposed to learn the leading singular subspaces of the Koopman operator. However, these methods require backpropagation through potentially numerically unstable operations on empirical second moment matrices, such as singular value decomposition and matrix inversion, during objective computation, which can introduce biased gradient estimates and hinder scalability to large systems. In this work, we propose a scalable and conceptually simple method for learning the top-k singular functions of the Koopman operator for stochastic dynamical systems based on the idea of low-rank approximation. Our approach eliminates the need for unstable linear algebraic operations and integrates easily into modern deep learning pipelines. Empirical results demonstrate that the learned singular subspaces are both reliable and effective for downstream tasks such as eigen-analysis and multi-step prediction.},
@@ -447,6 +466,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2510.21952},
   primaryClass={cs.LG},
   pdf={neurips2025b.pdf},
+  preview={neurips2025b.png},
   html={https://openreview.net/forum?id=AlRJVX5CRi},
   abstract={Spectral decomposition of linear operators plays a central role in many areas of machine learning and scientific computing. Recent work has explored training neural networks to approximate eigenfunctions of such operators, enabling scalable approaches to representation learning, dynamical systems, and partial differential equations (PDEs). In this paper, we revisit a classical optimization framework from the computational physics literature known as the *orbital minimization method* (OMM), originally proposed in the 1990s for solving eigenvalue problems in computational chemistry. We provide a simple linear algebraic proof of the consistency of the OMM objective, and reveal connections between this method and several ideas that have appeared independently across different domains. Our primary goal is to justify its broader applicability in modern learning pipelines. We adapt this framework to train neural networks to decompose positive semidefinite operators, and demonstrate its practical advantages across a range of benchmark tasks. Our results highlight how revisiting classical numerical methods through the lens of modern theory and computation can provide not only a principled approach for deploying neural networks in numerical analysis, but also effective and scalable tools for machine learning.},
 }
@@ -464,6 +484,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2202.02464v3},
   code={https://github.com/jongharyu/split-knn-rules},
   selected={false},
+  preview={fixedknn.png},
   abstract={This paper presents how to perform minimax optimal classification, regression, and density estimation based on fixed-$k$ nearest neighbor (NN) searches.
 We consider a distributed learning scenario, in which a massive dataset is split into smaller groups, where the $k$-NNs are found for a query point with respect to each subset of data.
 We propose \emph{optimal} rules to aggregate the fixed-$k$-NN information for classification, regression, and density estimation that achieve minimax optimal rates for the respective problems.
@@ -483,6 +504,7 @@ The proposed model, dubbed as the variational Wyner model, is designed based on 
 The model is trained by minimizing the symmetric Kullback--Leibler divergence between variational and model distributions with regularization terms for common information, reconstruction consistency, and latent space matching terms, which is carried out via an adversarial density ratio estimation technique.
 The utility of the proposed approach is demonstrated through experiments for joint and conditional generation with synthetic and real-world datasets, as well as a challenging zero-shot image retrieval task.},
   arxiv={1905.10945},
+  preview={wyner.png},
   code={https://github.com/jongharyu/wyner-model},
   selected={false},
   note={Submitted. <a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
@@ -507,6 +529,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   author+an={1=highlight},
   arXiv={2510.25983},
   abstract={The InfoNCE objective, originally introduced for contrastive representation learning, has become a popular choice for mutual information (MI) estimation, despite its indirect connection to MI. In this paper, we demonstrate why InfoNCE should not be regarded as a valid MI estimator, and we introduce a simple modification, which we refer to as InfoNCE-anchor, for accurate MI estimation. Our modification introduces an auxiliary anchor class, enabling consistent density ratio estimation and yielding a plug-in MI estimator with significantly reduced bias. Beyond this, we generalize our framework using proper scoring rules, which recover InfoNCE-anchor as a special case when the log score is employed. This formulation unifies a broad spectrum of contrastive objectives, including NCE, InfoNCE, and f-divergence variants, under a single principled framework. Empirically, we find that InfoNCE-anchor with the log score achieves the most accurate MI estimates; however, in self-supervised representation learning experiments, we find that the anchor does not improve the downstream task performance. These findings corroborate that contrastive representation learning benefits not from accurate MI estimation per se, but from the learning of structured density ratios.},
+  preview={infonce.png},
   selected={false},
 }
 
