Update previews; add talk slides

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -109,6 +109,7 @@
   html={https://ieeexplore.ieee.org/document/9712283},
   pdf={tit2022.pdf},
   preview={tit2022.png},
+  slides={talks/knn_2022_kias.pdf},
   arxiv={1805.08342},
   code={https://github.com/jongharyu/knn-functional-estimation},
   selected={false},
@@ -150,6 +151,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   pdf={icip2018.pdf},
   poster={icip2018-poster.pdf},
   preview={icip2018.png},
+  slides={talks/icip2018-slides.pdf},
   selected={false},
   abstract={A simple and scalable denoising algorithm is proposed that can be applied to a wide range of source and noise models. At the core of the proposed CUDE algorithm is symbol-by-symbol universal denoising used by the celebrated DUDE algorithm, whereby the optimal estimate of the source from an unknown distribution is computed by inverting the empirical distribution of the noisy observation sequence by a deep neural network, which naturally and implicitly aggregates multi-pie contexts of similar characteristics and estimates the conditional distribution more accurately. The performance of CUDE is evaluated for grayscale images of varying bit depths, which improves upon DUDE and its recent neural network based extension, Neural DUDE.},
 }
@@ -166,6 +168,8 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   html={https://ieeexplore.ieee.org/document/8613436},
   pdf={itw2018.pdf},
   preview={itw2018.png},
+  slides={talks/itw2018-slides.pdf},
+  annotation={alphabetically ordered},
   abstract={The Liu--Cuff--Verdu lemma states that in estimating a source $X$ from an observation $Y$, making a random guess $X'$ from the posterior $p(x|y)$ can go wrong at most twice as often as the optimal answer. Several variations of this fundamental, yet rather arcane, result are explored for detection, decoding, and estimation problems.},
 }
 
@@ -181,6 +185,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   html={https://ieeexplore.ieee.org/document/8636049/},
   pdf={allerton2018.pdf},
   preview={allerton2018.png},
+  annotation={alphabetically ordered},
   abstract={A randomized decoder that generates the message estimate according to the posterior distribution is known to achieve the reliability comparable to that of the maximum a posteriori probability decoder. With a goal of practical implementations of such a randomized decoder, several Monte Carlo techniques, such as rejection sampling, Gibbs sampling, and the Metropolis algorithm, are adapted to the problem of efficient sampling from the posterior distribution. Analytical and experimental results compare the complexity and performance of these Monte Carlo decoders for simple linear codes and the binary symmetric channel.},
 }
 
@@ -195,6 +200,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   author+an={1=highlight},
   html={https://ieeexplore.ieee.org/document/9517746},
   pdf={isit2021.pdf},
+  slides={talks/isit2021-slides.pdf},
   preview={isit2021.png},
   selected={false},
   abstract={This paper proposes a special variant of Laplacian eigenmaps, whose solution is characterized by the underlying density and the eigenfunctions of the associated Hilbert--Schmidt operator of a similarity kernel function.
@@ -318,6 +324,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
   pdf={icml2024a.pdf},
+  slides={talks/neuralsvd_2024_ita.pdf},
   preview={icml2024a.png},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
 is a fundamental task in many machine learning and scientific computing problems.
@@ -343,7 +350,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   pdf={icml2024b.pdf},
-  preview={icml2024b.png},
+  preview={icml2024b.gif},
   poster={icml2024-gambling-poster.pdf},
   abstract={A confidence sequence (CS) is a sequence of confidence sets that contains a target parameter of an underlying stochastic process at any time step with high probability.
   This paper proposes a new approach to constructing CSs for means of bounded multivariate stochastic processes using a general gambling framework, extending the recently established coin toss framework for bounded random processes.
@@ -372,6 +379,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   abstract={This paper questions the effectiveness of a modern predictive uncertainty quantification approach, called \emph{evidential deep learning} (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. Despite their perceived strong empirical performance on downstream tasks, a line of recent studies by Bengs et al. identify limitations of the existing methods to conclude their learned epistemic uncertainties are unreliable, e.g., in that they are non-vanishing even with infinite data. Building on and sharpening such analysis, we 1) provide a sharper understanding of the asymptotic behavior of a wide class of EDL methods by unifying various objective functions; 2) reveal that the EDL methods can be better interpreted as an out-of-distribution detection algorithm based on energy-based-models; and 3) conduct extensive ablation studies to better assess their empirical effectiveness with real-world datasets. Through all these analyses, we conclude that even when EDL methods are empirically effective on downstream tasks, this occurs despite their poor uncertainty quantification capabilities. Our investigation suggests that incorporating model uncertainty can help EDL methods faithfully quantify uncertainties and further improve performance on representative downstream tasks, albeit at the cost of additional computational complexity.},
   html={https://openreview.net/forum?id=P6nVDZRZRB},
   poster={neurips2024-poster.pdf},
+  slides={talks/neurips2024-slides.pdf},
   preview={neurips2024.png},
 }
 
@@ -505,6 +513,7 @@ The model is trained by minimizing the symmetric Kullback--Leibler divergence be
 The utility of the proposed approach is demonstrated through experiments for joint and conditional generation with synthetic and real-world datasets, as well as a challenging zero-shot image retrieval task.},
   arxiv={1905.10945},
   preview={wyner.png},
+  slides={talk/wyner2023.pdf},
   code={https://github.com/jongharyu/wyner-model},
   selected={false},
   note={Submitted. <a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
