Add slides; clean up slides file names

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -109,7 +109,7 @@
   html={https://ieeexplore.ieee.org/document/9712283},
   pdf={tit2022.pdf},
   preview={tit2022.png},
-  slides={talks/knn_2022_kias.pdf},
+  slides={talks/kias2022-knn.pdf},
   arxiv={1805.08342},
   code={https://github.com/jongharyu/knn-functional-estimation},
   selected={false},
@@ -225,6 +225,7 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   pages={6022--6044},
   pdf={aistats2022.pdf},
   poster={aistats2022-poster.pdf},
+  slides={talks/aistats2022-slides.pdf},
   preview={aistats2022.png},
   code={https://github.com/jongharyu/olo-with-side-information},
   selected={false},
@@ -324,7 +325,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
   pdf={icml2024a.pdf},
-  slides={talks/neuralsvd_2024_ita.pdf},
+  slides={talks/ita2024-neuralsvd.pdf},
   preview={icml2024a.png},
   abstract={Computing eigenvalue decomposition (EVD) of a given linear operator, or finding its leading eigenvalues and eigenfunctions,
 is a fundamental task in many machine learning and scientific computing problems.
