--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,6 +96,7 @@
 
 % journal papers
 @article{Ryu--Ganguly--Kim--Noh--Lee2018,
+  keywords={information-theory,statistics,information-measures},
   abbr={TransIT},
   title={Nearest neighbor density functional estimation from inverse {L}aplace transform},
   author={Ryu*, J. Jon and Ganguly*, Shouvik and Kim, Young-Han and Noh, Yung-Kyun and Lee, Daniel D.},
@@ -112,11 +113,11 @@
   slides={talks/kias2022-knn.pdf},
   arxiv={1805.08342},
   code={https://github.com/jongharyu/knn-functional-estimation},
-  selected={false},
   abstract={A new approach to $L_2$-consistent estimation of a general density functional using k-nearest neighbor distances is proposed, where the functional under consideration is in the form of the expectation of some function f of the densities at each point. The estimator is designed to be asymptotically unbiased, using the convergence of the normalized volume of a $k$-nearest neighbor ball to a Gamma distribution in the large-sample limit, and naturally involves the inverse Laplace transform of a scaled version of the function $f$. Some instantiations of the proposed estimator recover existing $k$-nearest neighbor based estimators of Shannon and Rényi entropies and Kullback–Leibler and Rényi divergences, and discover new consistent estimators for many other functionals such as logarithmic entropies and divergences. The $L_2$-consistency of the proposed estimator is established for a broad class of densities for general functionals, and the convergence rate in mean squared error is established as a function of the sample size for smooth, bounded densities.},
 }
 
 @article{Ryu--Bhatt2024,
+  keywords={sequential-decision-making,uncertainty-quantification,information-theory,statistics},
   abbr={TransIT},
   title={On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies},
   author={Ryu, J. Jon and Bhatt, Alankrita},
@@ -130,15 +131,16 @@
   pdf={tit2024.pdf},
   preview={tit2024.png},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
-  selected={true},
   abstract={This paper considers the problem of constructing a confidence sequence, which is a sequence of confidence intervals that hold uniformly over time, for estimating the mean of bounded real-valued random processes.
 This paper revisits the gambling-based approach established in the recent literature from a natural \emph{two-horse race} perspective, and demonstrates new properties of the resulting algorithm induced by Cover (1991)'s universal portfolio.
 The main result of this paper is a new algorithm based on a mixture of lower bounds, which closely approximates the performance of Cover's universal portfolio with constant per-round time complexity.
 A higher-order generalization of a lower bound on a logarithmic function in (Fan et al., 2015), which is developed as a key technique for the proposed algorithm, may be of independent interest.},
+  selected={true},
 }
 
 % conference proceedings
 @inproceedings{Ryu--Kim2018,
+  keywords={information-theory,deep-learning},
   abbr={ICIP},
   title={Conditional distribution learning with neural networks and its application to universal image denoising},
   author={Ryu, Jongha and Kim, Young-Han},
@@ -152,11 +154,11 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   poster={icip2018-poster.pdf},
   preview={icip2018.png},
   slides={talks/icip2018-slides.pdf},
-  selected={false},
   abstract={A simple and scalable denoising algorithm is proposed that can be applied to a wide range of source and noise models. At the core of the proposed CUDE algorithm is symbol-by-symbol universal denoising used by the celebrated DUDE algorithm, whereby the optimal estimate of the source from an unknown distribution is computed by inverting the empirical distribution of the noisy observation sequence by a deep neural network, which naturally and implicitly aggregates multi-pie contexts of similar characteristics and estimates the conditional distribution more accurately. The performance of CUDE is evaluated for grayscale images of varying bit depths, which improves upon DUDE and its recent neural network based extension, Neural DUDE.},
 }
 
 @inproceedings{Bhatt--Huang--Kim--Ryu--Sen2018ITW,
+  keywords={information-theory,statistics},
   abbr={ITW},
   title={Variations on a theme by {L}iu, {C}uff, and {V}erd{\'u}: The power of posterior sampling},
   author={Bhatt†, Alankrita and Huang†, Jiun-Ting and Kim†, Young-Han and Ryu†, J. Jon and Sen†, Pinar},
@@ -174,6 +176,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
 }
 
 @inproceedings{Bhatt--Huang--Kim--Ryu--Sen2018Allerton,
+  keywords={information-theory},
   abbr={Allerton},
   title={Monte {C}arlo methods for randomized likelihood decoding},
   author={Bhatt†, Alankrita and Huang†, Jiun-Ting and Kim†, Young-Han and Ryu†, J. Jon and Sen†, Pinar},
@@ -190,6 +193,7 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
 }
 
 @inproceedings{Ryu--Huang--Kim2021,
+  keywords={operator-learning,representation-learning},
   abbr={ISIT},
   title={On the Role of Eigendecomposition in Kernel Embedding},
   author={Ryu, J. Jon and Huang, Jiun-Ting and Kim, Young-Han},
@@ -202,13 +206,13 @@ A higher-order generalization of a lower bound on a logarithmic function in (Fan
   pdf={isit2021.pdf},
   slides={talks/isit2021-slides.pdf},
   preview={isit2021.png},
-  selected={false},
   abstract={This paper proposes a special variant of Laplacian eigenmaps, whose solution is characterized by the underlying density and the eigenfunctions of the associated Hilbert--Schmidt operator of a similarity kernel function.
 In contrast to existing kernel-based spectral methods such as kernel principal component analysis and Laplacian eigenmaps, the new embedding algorithm only involves estimating density at each query point without any eigendecomposition of a matrix.
 A concrete example of dot-product kernels over hypersphere is provided to illustrate the applicability of the proposed framework.},
 }
 
 @inproceedings{Ryu--Bhatt--Kim2022,
+  keywords={information-theory,sequential-decision-making},
   abbr={AISTATS},
   title={Parameter-Free Online Linear Optimization with Side Information via Universal Coin Betting},
   author={Ryu, J. Jon and Bhatt, Alankrita and Kim, Young-Han},
@@ -228,13 +232,13 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   slides={talks/aistats2022-slides.pdf},
   preview={aistats2022.png},
   code={https://github.com/jongharyu/olo-with-side-information},
-  selected={false},
   abstract={A class of parameter-free online linear optimization algorithms is proposed that harnesses the structure of an adversarial sequence by adapting to some side information. These algorithms combine the reduction technique of Orabona and P{\'a}l (2016) for adapting coin betting algorithms for online linear optimization with universal compression techniques in information theory for incorporating sequential side information to coin betting.
 Concrete examples are studied in which the side information has a tree structure and consists of quantized values of the previous symbols of the adversarial sequence, including fixed-order and variable-order Markov cases.
 By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjalkens (1995), the proposed algorithm is further refined to achieve the best performance over all adaptive algorithms with tree-structured side information of a given maximum order in a computationally efficient manner.},
 }
 
 @inproceedings{Bhatt--Ryu--Kim2023,
+  keywords={information-theory,sequential-decision-making},
   abbr={AISTATS},
   title={On Universal Portfolios with Continuous Side Information},
   author={Bhatt*, Alankrita and Ryu*, J. Jon and Kim, Young-Han},
@@ -258,6 +262,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
 }
 
 @inproceedings{Yang--Sautiere--Ryu--Cohen2020,
+  keywords={deep-learning},
   abbr={ICASSP},
   title={Feedback Recurrent Autoencoder},
   author={Yang, Yang and Sauti{\`e}re, Guillaume and Ryu, J. Jon and Cohen, Taco S.},
@@ -286,6 +291,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
 }
 
 @inproceedings{Shah--Shen--Ryu--Das--Sattigeri--Bu--Wornell2023,
+  keywords={uncertainty-quantification,fairness},
   abbr={ISIT},
   title={Group Fairness with Uncertainty in Sensitive Attributes},
   author={Shah, Abhin and Shen, Maohao and Ryu, J. Jon and Das, Subhro and Sattigeri, Prasanna and Bu, Yuheng and Wornell, Gregory W.},
@@ -310,6 +316,7 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
 }
 
 @inproceedings{Ryu--Xu--Erol--Bu--Zheng--Wornell2024,
+  keywords={operator-learning,deep-learning,representation-learning},
   abbr={ICML},
   title={Operator SVD with Neural Networks via Nested Low-Rank Approximation},
   author={Ryu, J. Jon and Xu, Xiangxiang and Erol, H. S. Melichan and Bu, Yuheng and Zheng, Lizhong and Wornell, Gregory W.},
@@ -320,7 +327,6 @@ This result can be viewed as an extension of the seminal work of Cover and Orden
   primaryClass={cs.LG},
   author+an={1=highlight},
   arxiv={2402.03655},
-  selected={true},
   html={https://openreview.net/forum?id=qESG5HaaoJ},
   poster={icml2024-neuralsvd-poster.pdf},
   code={https://github.com/jongharyu/neural-svd},
@@ -334,9 +340,11 @@ This paper proposes a new optimization framework based on the low-rank approxima
 The proposed method promotes the desired orthogonality in the learned functions implicitly and efficiently via an unconstrained optimization formulation, which is easy to solve with off-the-shelf gradient-based optimization algorithms.
 We demonstrate the effectiveness of the proposed optimization framework for use cases in computational physics and machine learning.},
   note={<a href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_225.pdf">An extended abstract</a> was presented at <a href="https://ml4physicalsciences.github.io/2023/">Machine Learning and the Physical Sciences Workshop, NeurIPS 2023</a>.},
+  selected={true},
 }
 
 @inproceedings{Ryu--Wornell2024,
+  keywords={sequential-decision-making,uncertainty-quantification,information-theory,statistics},
   abbr={ICML},
   title={Gambling-Based Confidence Sequences for Bounded Random Vectors},
   author={Ryu, J. Jon and Wornell, Gregory W.},
@@ -348,7 +356,6 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author+an={1=highlight},
   arxiv={2402.03683},
   html={https://openreview.net/forum?id=mu7Er7f9NQ},
-  selected={true},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   pdf={icml2024b.pdf},
   preview={icml2024b.gif},
@@ -361,9 +368,11 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   When applied to the sampling without-replacement setting for finite categorical data, it is shown that the resulting CS based on a universal gambling strategy is provably tighter than that of the posterior-prior ratio martingale proposed by Waudby-Smith and Ramdas.},
   award={Top 3.5% of submissions},
   award_name={Spotlight},
+  selected={true},
 }
 
-@inproceedings{Shen--Ryu--Ghosh--Bu--Sattigerri--Wornell2024,
+@inproceedings{Shen--Ryu--Ghosh--Bu--Sattigeri--Wornell2024,
+  keywords={uncertainty-quantification,deep-learning,divergence-matching},
   abbr={NeurIPS},
   title={Are Uncertainty Quantification Capabilities of Evidential Deep Learning a Mirage?},
   author={Shen*, Maohao and Ryu*, J. Jon and Ghosh, Soumya and Bu, Yuheng and Sattigeri, Prasanna and Das, Subhro and Wornell, Gregory W.},
@@ -374,7 +383,6 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   arxiv={2402.06160},
-  selected={false},
   code={https://github.com/maohaos2/EDL-Mirage},
   pdf={neurips2024.pdf},
   abstract={This paper questions the effectiveness of a modern predictive uncertainty quantification approach, called \emph{evidential deep learning} (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. Despite their perceived strong empirical performance on downstream tasks, a line of recent studies by Bengs et al. identify limitations of the existing methods to conclude their learned epistemic uncertainties are unreliable, e.g., in that they are non-vanishing even with infinite data. Building on and sharpening such analysis, we 1) provide a sharper understanding of the asymptotic behavior of a wide class of EDL methods by unifying various objective functions; 2) reveal that the EDL methods can be better interpreted as an out-of-distribution detection algorithm based on energy-based-models; and 3) conduct extensive ablation studies to better assess their empirical effectiveness with real-world datasets. Through all these analyses, we conclude that even when EDL methods are empirically effective on downstream tasks, this occurs despite their poor uncertainty quantification capabilities. Our investigation suggests that incorporating model uncertainty can help EDL methods faithfully quantify uncertainties and further improve performance on representative downstream tasks, albeit at the cost of additional computational complexity.},
@@ -385,6 +393,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
 }
 
 @inproceedings{Ryu--Shah--Wornell2025,
+  keywords={probabilistic-modeling,statistics,divergence-matching},
   abbr={ICML},
   title={A Unified View on Learning Unnormalized Distributions via Noise-Contrastive Estimation},
   author={Ryu, J. Jon and Shah, Abhin and Wornell, Gregory W.},
@@ -397,13 +406,14 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix={arXiv},
   eprint={2409.18209},
   arxiv={2409.18209},
-  selected={true},
   poster={icml2025-nce-poster.pdf},
   pdf={icml2025b.pdf},
   preview={icml2025b.png},
+  selected={true},
 }
 
 @inproceedings{Jayashankar--Ryu--Wornell2025,
+  keywords={probabilistic-modeling,deep-learning,information-theory,information-measures,divergence-matching},
   abbr={ICML},
   title={Score-of-Mixture Training: Training One-Step Generative Models Made Simple},
   author={Jayashankar*, Tejas and Ryu*, J. Jon and Wornell, Gregory W.},
@@ -416,16 +426,17 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   archivePrefix = {arXiv},
   eprint = {2502.09609},
   arXiv = {2502.09609},
-  selected = {true},
   award={Top 2.6% of submissions},
   award_name={Spotlight},
   poster={icml2025-smt-poster.pdf},
   pdf={icml2025a.pdf},
   preview={icml2025a.png},
   code={https://github.com/tkj516/score-of-mixture-training},
+  selected={true},
 }
 
 @inproceedings{Ryu--Kwon--Koppe--Jun2025,
+  keywords={uncertainty-quantification,information-theory,sequential-decision-making,statistics},
   abbr={COLT},
   title={Improved Offline Contextual Bandits with Second-Order Bounds: Betting and Freezing},
   author={Ryu, J. Jon and Kwon, Jeongyeol and Koppe, Benjamin and Jun, Kwang-Sung},
@@ -445,6 +456,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
 }
 
 @inproceedings{Jeong--Ryu--Yun--Wornell2025,
+  keywords={operator-learning,deep-learning,representation-learning},
   abbr={NeurIPS},
   title={Efficient Parametric SVD of Koopman Operator for Stochastic Dynamical Systems},
   author={Jeong*, Minchan and Ryu*, J. Jon and Yun, Se-Young and Wornell, Gregory W.},
@@ -457,12 +469,13 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   primaryClass={cs.LG},
   pdf={neurips2025a.pdf},
   preview={neurips2025a.png},
-  selected={true},
   html={https://openreview.net/forum?id=kL2pnzClyD},
   abstract={The Koopman operator provides a principled framework for analyzing nonlinear dynamical systems through linear operator theory. Recent advances in dynamic mode decomposition (DMD) have shown that trajectory data can be used to identify dominant modes of a system in a data-driven manner. Building on this idea, deep learning methods such as VAMPnet and DPNet have been proposed to learn the leading singular subspaces of the Koopman operator. However, these methods require backpropagation through potentially numerically unstable operations on empirical second moment matrices, such as singular value decomposition and matrix inversion, during objective computation, which can introduce biased gradient estimates and hinder scalability to large systems. In this work, we propose a scalable and conceptually simple method for learning the top-k singular functions of the Koopman operator for stochastic dynamical systems based on the idea of low-rank approximation. Our approach eliminates the need for unstable linear algebraic operations and integrates easily into modern deep learning pipelines. Empirical results demonstrate that the learned singular subspaces are both reliable and effective for downstream tasks such as eigen-analysis and multi-step prediction.},
+  selected={true},
 }
 
 @inproceedings{Ryu--Zhou--Wornell2025,
+  keywords={operator-learning,deep-learning,representation-learning},
   abbr={NeurIPS},
   title={Revisiting Orbital Minimization Method for Neural Operator Decomposition},
   author={Ryu, J. Jon and Zhou, Samuel and Wornell, Gregory W.},
@@ -470,7 +483,6 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   month=dec,
   booktitle=neurips,
   author+an={1=highlight},
-  selected={true},
   eprint={2510.21952},
   arxiv={2510.21952},
   primaryClass={cs.LG},
@@ -478,10 +490,12 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   preview={neurips2025b.png},
   html={https://openreview.net/forum?id=AlRJVX5CRi},
   abstract={Spectral decomposition of linear operators plays a central role in many areas of machine learning and scientific computing. Recent work has explored training neural networks to approximate eigenfunctions of such operators, enabling scalable approaches to representation learning, dynamical systems, and partial differential equations (PDEs). In this paper, we revisit a classical optimization framework from the computational physics literature known as the *orbital minimization method* (OMM), originally proposed in the 1990s for solving eigenvalue problems in computational chemistry. We provide a simple linear algebraic proof of the consistency of the OMM objective, and reveal connections between this method and several ideas that have appeared independently across different domains. Our primary goal is to justify its broader applicability in modern learning pipelines. We adapt this framework to train neural networks to decompose positive semidefinite operators, and demonstrate its practical advantages across a range of benchmark tasks. Our results highlight how revisiting classical numerical methods through the lens of modern theory and computation can provide not only a principled approach for deploying neural networks in numerical analysis, but also effective and scalable tools for machine learning.},
+  selected={true},
 }
 
 % preprints
 @misc{Ryu--Kim2021,
+  keywords={information-theory,statistics},
   abbr={arXiv},
   title={Minimax Optimal Algorithms with Fixed-k-Nearest Neighbors},
   author={Ryu, J. Jon and Kim, Young-Han},
@@ -492,17 +506,16 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author+an={1=highlight},
   arxiv={2202.02464v3},
   code={https://github.com/jongharyu/split-knn-rules},
-  selected={false},
   preview={fixedknn.png},
   abstract={This paper presents how to perform minimax optimal classification, regression, and density estimation based on fixed-$k$ nearest neighbor (NN) searches.
 We consider a distributed learning scenario, in which a massive dataset is split into smaller groups, where the $k$-NNs are found for a query point with respect to each subset of data.
 We propose \emph{optimal} rules to aggregate the fixed-$k$-NN information for classification, regression, and density estimation that achieve minimax optimal rates for the respective problems.
 We show that the distributed algorithm with a fixed $k$ over a sufficiently large number of groups attains a minimax optimal error rate up to a multiplicative logarithmic factor under some regularity conditions.
 Roughly speaking, distributed $k$-NN rules with $M$ groups has a performance comparable to the standard $\Theta(kM)$-NN rules even for fixed $k$.},
-  note={Submitted.}
 }
 
 @misc{Ryu--Choi--Kim--El-Khamy--Lee2022,
+  keywords={probabilistic-modeling,information-theory,deep-learning,representation-learning,information-measures,divergence-matching},
   abbr={arXiv},
   title={Learning with Succinct Common Representation with {W}yner's Common Information},
   author={Ryu, J. Jon and Choi, Yoojin and Kim, Young-Han and El-Khamy, Mostafa and Lee, Jungwon},
@@ -516,47 +529,50 @@ The utility of the proposed approach is demonstrated through experiments for joi
   preview={wyner.png},
   slides={talk/wyner2023.pdf},
   code={https://github.com/jongharyu/wyner-model},
-  selected={false},
-  note={Submitted. <a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
-} % ; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>
+  note={{Preliminary versions} were presented at <a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{the Bayesian Deep Learning Workshop at NeurIPS 2018}</a> and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{at the Bayesian Deep Learning workshop at NeurIPS 2021}</a>.},
+}
 
 @misc{Yun--Kim--Park--Kim--Ryu--Cho--Jun2025,
+  keywords={probabilistic-modeling,deep-learning,large-language-models,divergence-matching},
   abbr={arXiv},
   title={Alignment as Distribution Learning: Your Preference Model is Explicitly a Language Model},
   author={Yun, Jihun and Kim, Juno and Park, Jongho and Kim, Junhyuck and Ryu, J. Jon and Cho, Jaewoong and Jun, Kwang-Sung},
   year={2025},
+  month=jun,
   author+an={5=highlight},
   arxiv={2506.01523},
   abstract={Alignment via reinforcement learning from human feedback (RLHF) has become the dominant paradigm for controlling the quality of outputs from large language models (LLMs). However, when viewed as ‘loss + regularization,’ the standard RLHF objective lacks theoretical justification and incentivizes degenerate, deterministic solutions, an issue that variants such as Direct Policy Optimization (DPO) also inherit. In this paper, we rethink alignment by framing it as distribution learning from pairwise preference feedback by explicitly modeling how information about the target language model bleeds through the preference data. This explicit modeling leads us to propose three principled learning objectives: preference maximum likelihood estimation, preference distillation, and reverse KL minimization. We theoretically show that all three approaches enjoy strong non-asymptotic $O(1/n)$ convergence to the target language model, naturally avoiding degeneracy and reward overfitting. Finally, we empirically demonstrate that our distribution learning framework, especially preference distillation, consistently outperforms or matches the performances of RLHF and DPO across various tasks and models.},
-  selected={false},
 }
 
 @misc{Ryu--Yeddanapudi--Xu--Wornell2025,
+  keywords={probabilistic-modeling,information-theory,information-measures,divergence-matching},
   abbr={arXiv},
   title={Contrastive Predictive Coding Done Right for Mutual Information Estimation},
   author={Ryu, J. Jon and Yeddanapudi, Pavan and Xu, Xiangxiang and Wornell, Gregory W.},
   year={2025},
+  month=oct,
   author+an={1=highlight},
   arXiv={2510.25983},
   abstract={The InfoNCE objective, originally introduced for contrastive representation learning, has become a popular choice for mutual information (MI) estimation, despite its indirect connection to MI. In this paper, we demonstrate why InfoNCE should not be regarded as a valid MI estimator, and we introduce a simple modification, which we refer to as InfoNCE-anchor, for accurate MI estimation. Our modification introduces an auxiliary anchor class, enabling consistent density ratio estimation and yielding a plug-in MI estimator with significantly reduced bias. Beyond this, we generalize our framework using proper scoring rules, which recover InfoNCE-anchor as a special case when the log score is employed. This formulation unifies a broad spectrum of contrastive objectives, including NCE, InfoNCE, and f-divergence variants, under a single principled framework. Empirically, we find that InfoNCE-anchor with the log score achieves the most accurate MI estimates; however, in self-supervised representation learning experiments, we find that the anchor does not improve the downstream task performance. These findings corroborate that contrastive representation learning benefits not from accurate MI estimation per se, but from the learning of structured density ratios.},
   preview={infonce.png},
-  selected={false},
+  selected={true},
 }
 
 # working papers
 
 # unpublished technical reports
 @report{Jayashankar--Ryu--Xu--Wornell2024,
+  keywords={probabilistic-modeling,deep-learning,divergence-matching},
   abbr={Tech. Report},
   title={Lifted Residual Score Estimation},
   author={Jayashankar*, Tejas and Ryu*, J. Jon and Xu, Xiangxiang and Wornell, Gregory W.},
   year={2024},
   author+an={2=highlight},
-  selected={false},
   note={<a href="https://openreview.net/forum?id=5wdY7N5hNn">{An extended abstract}</a> was presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
 }
 
 @report{Ryu--Kim2022,
+  keywords={information-theory,statistics},
   abbr={arXiv},
   title={An Information-Theoretic Proof of {K}ac--{B}ernstein Theorem},
   author={Ryu, J. Jon and Kim, Young-Han},
@@ -571,6 +587,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
 }
 
 @report{Yoo--Ha--Yi--Ryu--Kim--Ha--Kim--Yoon2017,
+  keywords={probabilistic-modeling,deep-learning},
   abbr={arXiv},
   title={Energy-based sequence {GAN}s for recommendation and their connection to imitation learning},
   author={Yoo, Jaeyoon and Ha, Heonseok and Yi, Jihun and Ryu, Jongha and Kim, Chanju and Ha, Jung-Woo and Kim, Young-Han and Yoon, Sungroh},
